src/objects/CBAccountType__c.object
<CustomObject>
    <fields>
        <fullName>CBStyle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CB Style</label>
        <referenceTo>CBStyle__c</referenceTo>
        <relationshipLabel>CB Styles</relationshipLabel>
        <relationshipName>CB_Styles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>T-{00}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sign__c</fullName>
        <label>Sign</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CB Account Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sign__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Account Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Account Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>